# nexus-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  openapi.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml  release.yml
deploy/docs/: IMAGE_REGISTRY.md  OPERATIONS.md  (+3 more)
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/gateway/: __init__.py  config.py  entities.py  main.py  models.py  orchestrator.py  server.py
services/gateway/gateway/agents/: __init__.py  executor.py  planner.py  tools.py
services/gateway/gateway/clients/: __init__.py  data_api.py
services/gateway/gateway/generation/: __init__.py  llm.py  prompts.py  response.py
services/gateway/gateway/middleware/: auth.py  logging.py  request_id.py
services/gateway/gateway/retrieval/: __init__.py  engine.py  indexer.py  loader.py  reranker.py  strategies.py
services/gateway/gateway/routes/: chat.py  documents.py  sessions.py  system.py  websocket.py
services/gateway/gateway/storage/: __init__.py  cache.py  rate_limiter.py  sessions.py
services/gateway/tests/: conftest.py
services/gateway/tests/integration/: test_chat_endpoint.py  test_document_upload.py
services/gateway/tests/unit/: test_cache.py  test_executor.py  test_indexer.py  test_planner.py  test_rate_limiter.py  test_reranker.py  test_sessions.py  test_strategies.py
(+105 files in other folders)
