[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-rag-gateway"
version = "1.0.0"
description = "NexusRAG — intelligent document retrieval API gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.1",
    "loguru>=0.7",
    "httpx>=0.27",
    "tenacity>=8.2",
    "langchain>=0.3",
    "langchain-classic>=1.0",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
    "rank-bm25>=0.2",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.7",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
nexus-gateway = "gateway.server:main"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
